# ortho_ranker

./: .gitignore  LICENSE  README.md  config.bad_expression_columns.yaml  config.missing_expression_id.yaml  config.no_valid_hit.yaml  config.template.yaml  config.test.yaml  pyproject.toml
ortho_ranker/: assess.py  blastdb.py  candidates.py  cli.py  config.py  expression.py  reciprocal.py  runner.py  suggestions.py
test_data/: query_test.fa
test_data/blastdb/: target_test_db.phr  target_test_db.pin  target_test_db.pjs  target_test_db.psq
test_data/expression/: expression_missing_column.tsv  expression_missing_id.tsv  expression_test.tsv
test_data/no_valid_hit/: reference_no_valid_hit.fa  target_test.fa
test_data/no_valid_hit/blastdb/: reference_no_valid_hit_db.phr  reference_no_valid_hit_db.pin  reference_no_valid_hit_db.pjs  reference_no_valid_hit_db.psq
tests/: test_cli.py
